Hide escape button when on step 1 and focus on text field so shift-enter works [fixes #89846102]

--- a/app/assets/stylesheets/survey.css.scss
+++ b/app/assets/stylesheets/survey.css.scss
@@ -3,6 +3,7 @@
     text-align: center;
   }
   table.welcome {
+    display: none;
     width: 245px;
     text-align: center;
     margin-left: auto;
